# archery

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  cicd_principles.md  deploy.yml  manual.yml
src/: __init__.py  main.py
src/models/: score.py
src/repositories/: csv_score_repository.py  score_repository.py
tests/: test_csv_repository.py  test_score.py
