[project]
name = "archery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "go-task-bin>=3.44.0",
    "loguru>=0.7.3",
    "mypy>=1.16.1",
    "pydantic>=2.0.0",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "ruff>=0.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]